--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <base href="./">
-  <title>古文単語330マスター</title>
+  <title>文学史基礎マスター</title>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
@@ -16,7 +16,7 @@
   <div id="startScreen" class="start-screen" aria-label="スタート画面">
     <div class="hub">
       <header class="hub-bar">
-        <div class="hub-title">古文単語330マスター</div>
+        <div class="hub-title">文学史基礎マスター</div>
         <div class="hub-status"><span class="hub-dot" aria-hidden="true"></span><span>ONLINE</span></div>
       </header>
 
@@ -118,6 +118,7 @@
   <script src="./app.js"></script>
 </body>
 </html>
+
 
 
 
