--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <!-- =========================
        QUIZ UI
        ========================= -->
-  <h1>古文単語330マスター</h1>
+  <h1>文学史基礎マスター</h1>
 
   <div id="quiz" class="panel">
     <div id="meta">
@@ -118,6 +118,7 @@
   <script src="./app.js"></script>
 </body>
 </html>
+
 
 
 
