--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <base href="./">
   <title>文学史知識マスター</title>
   <link rel="stylesheet" href="./styles.css" />
@@ -11,31 +11,38 @@
 <body>
 
   <!-- =========================
-       START SCREEN (Cyber Console)
+       START SCREEN (kobun準拠：4ボタン)
        ========================= -->
   <div id="startScreen" class="start-screen" aria-label="スタート画面">
     <div class="hub">
       <header class="hub-bar">
         <div class="hub-title">文学史知識マスター</div>
-        <div class="hub-status"><span class="hub-dot" aria-hidden="true"></span><span>ONLINE</span></div>
+        <div class="hub-status">
+          <span class="hub-dot" aria-hidden="true"></span>
+          <span>ONLINE</span>
+        </div>
       </header>
 
       <main class="hub-grid" aria-label="メニュー">
+        <!-- 通常10問 -->
         <a id="modeNormalBtn" class="hub-card primary" href="./index.html?mode=normal&start=1">
           <div class="hub-main">通常10問</div>
           <div class="hub-sub">10 QUESTIONS / QUICK</div>
         </a>
 
+        <!-- 連続学習 -->
         <a id="modeEndlessBtn" class="hub-card primary" href="./index.html?mode=endless&start=1">
           <div class="hub-main">連続学習</div>
           <div class="hub-sub">ENDLESS / FOCUS</div>
         </a>
 
+        <!-- 図鑑 -->
         <a id="openCollectionBtn" class="hub-card" href="https://naoki496.github.io/cards-hub/">
           <div class="hub-main">図鑑</div>
           <div class="hub-sub">COLLECTION / CARDS</div>
         </a>
 
+        <!-- TOPへ戻る -->
         <a id="backToTopBtn" class="hub-card exit" href="https://naoki496.github.io/kokugo-dojo/">
           <div class="hub-main">TOPへ戻る</div>
           <div class="hub-sub">EXIT / PORTAL</div>
@@ -53,7 +60,7 @@
   </div>
 
   <!-- =========================
-       QUIZ UI
+       QUIZ UI（ここから下は常に1系統のみ）
        ========================= -->
   <h1>文学史知識マスター</h1>
 
@@ -73,7 +80,7 @@
       <div id="meterArea">
         <div id="meterText">
           <div id="meterLabel">進捗 0/0 (0%)</div>
-          <div id="meterRight"> </div>
+          <div id="meterRight"></div>
         </div>
         <div id="meterOuter"><div id="meterInner"></div></div>
       </div>
